syntax = "proto3";

package common.protobuf;
import "Data.proto";

message CSItemInfo {

}

message CSItemUse {
	int32 item_id = 1;
	int32 num = 2;
}

message SCItemInfo {
	ItemData item_data = 1;
}
