using Google.Protobuf;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

public class EMsgCode
{
    public const short CS_Login = 10001;
    public const short CS_CreatePlayer = 10002;
    public const short CS_LoadPlayer = 10003;
    public const short SC_Login = 20001;
    public const short SC_PlayerList = 20002;
    public const short SC_PlayerInfo = 20003;


    public const short CS_ItemInfo = 10100;
    public const short CS_ItemUse = 10101;
    public const short SC_ItemInfo = 20100;

}
